--- a/Shopping/Views/Cart/Index.cshtml
+++ b/Shopping/Views/Cart/Index.cshtml
@@ -4,7 +4,7 @@
 }
 
 <h1>Add Order</h1>
-
+<a asp-action="ViewOrders">Show Orders</a>
 <form action="" method="post">
     <label asp-for="@Model.AssociatedCustomer">Customer</label>
     <select name="customerId">
@@ -14,8 +14,8 @@
         }
     </select>
     <label for="data">Date</label>
-    <input name="date" type="date" value="@DateTime.Now"/>
-
+    <input name="date" id="date-picker" type="date" />
+    
     <table class="table">
         <tr>
             <th>Product</th>
@@ -24,7 +24,7 @@
             <th>Actions</th>
         </tr>
         <tbody id="line-item-container">
-            <tr>
+            @*<tr>
                 <td><input type="hidden" value="2" name="[0].product.id" /> Carrots</td>
                 <td><input type="hidden" value="12" name="[0].quantity" />12</td>
                 <td><input type="hidden" value="120" name="[0].total" />120</td>
@@ -35,7 +35,7 @@
                 <td><input type="hidden" value="12" name="[1].quantity" />2</td>
                 <td><input type="hidden" value="120" name="[1].total" />240</td>
                 <td><button>Remove</button></td>
-            </tr>
+            </tr>*@
         </tbody>
         <tr>
             <td>
@@ -49,41 +49,16 @@
                     }
                 </select>
             </td>
-            <td><input id="quantity-input" type="number" name="quantity" /></td>
+            <td><input min="1" id="quantity-input" type="number" name="quantity" /></td>
             <td><h4 id="quantity-output"></h4></td>
             <td><button id="add-line-item">Add</button></td>
         </tr>
     </table>
 
-    <h2>Total : </h2>
+    <h2>Grand Total : <span id="total-output"></span></h2>
 
-    <input type="submit"/>
+    <input id="submit-button" type="submit"/>
 </form>
 
-<script>
-    var productPicker = document.getElementById("product-picker");
-    var quantityInput = document.getElementById("quantity-input");
-    var quantityOutput = document.getElementById("quantity-output");
-    var addLineItem = document.getElementById("add-line-item");
-    var lineItemContainer = document.getElementById("line-item-container");
-    var idCounter = 2
-    addLineItem.addEventListener('click', e => {
-        e.preventDefault();
-        var lineItemElement = document.createElement("tr");
-        var productIdElement = document.createElement("td");
-        productIdElement.innerHTML = `<input type='hidden' value='${productPicker.value}' name='[${idCounter}].product.id' />` 
-        var quantityElement = document.createElement("td");
-        quantityElement.innerHTML =`<input type="hidden" value="12" name="[${idCounter}].quantity" />`
-        var totalElement = document.createElement("td");
-        totalElement.innerHTML = `<h4>${parseInt(productPicker.firstElementChild.getAttribute('data-unit-price')) * parseInt(quantityInput.value)}</h4>`
-        var removeElement = document.createElement("td");
-        removeElement.innerHTML = `<button>Remove</button>`
-        lineItemElement.appendChild(productIdElement);
-        lineItemElement.appendChild(quantityElement);
-        lineItemElement.appendChild(totalElement);
-        lineItemElement.appendChild(removeElement);
-        lineItemContainer.appendChild(lineItemElement);
-        idCounter++
-    })
-</script>
+<script src="~/js/cartEditor.js"></script>
 
