--- a/Shopping/Views/Cart/ViewOrder.cshtml
+++ b/Shopping/Views/Cart/ViewOrder.cshtml
@@ -32,7 +32,7 @@
                     </select>
                 </td>
                 <td><input id="quantity-input" type="number" name="quantity" /><input type="hidden" value="0" name="lineId" /></td>
-                <td><button id="add-line-item" asp-action="UpdateLineItem">Edit</button></td>
+                <td><button class="btn btn-info" id="edit-line-item" asp-action="UpdateLineItem">Edit</button></td>
             </tr>
             @foreach (var item in Model.LineItems)
             {
@@ -56,7 +56,6 @@
                 </table>
 
 
-                @*<input type="submit" disabled />*@
             </form>
 
             <script src="~/js/editOrder.js"></script>
