--- a/Shopping/Views/Cart/ViewProduct.cshtml
+++ b/Shopping/Views/Cart/ViewProduct.cshtml
@@ -15,5 +15,5 @@
     <label>Update Quantity</label>
     <input type="number" name="productId" hidden value="@Model.Id" />
     <input type="number" name="newQuantity" placeholder="@Model.QuantityAtHand" />
-    <input type="submit" value="Update" />
+    <input class="btn btn-dark" type="submit" value="Update" />
 </form>
