--- a/Shopping/Views/Cart/ViewProducts.cshtml
+++ b/Shopping/Views/Cart/ViewProducts.cshtml
@@ -3,6 +3,8 @@
     ViewData["Title"] = "ViewProducts";
 }
 
+<a asp-action="Index">Back</a>
+
 <h1>List of Products</h1>
 <a class="btn btn-secondary" asp-action="AddProduct">Add New</a>
 
