--- a/Shopping/Views/Cart/AddCustomer.cshtml
+++ b/Shopping/Views/Cart/AddCustomer.cshtml
@@ -3,18 +3,22 @@
     ViewData["Title"] = "Add Customer";
 }
 
-<a asp-action="Index">Back</a>
+    <div class="row">
+        <div class="col-5 offset-3">
+            <a asp-action="Index">Back</a>
 
-<h1>Add Customer</h1>
+            <h1>Add Customer</h1>
 
-<form class="form-group" action="" method="post">
-    <div class="form-control">
-        <lable asp-for="@Model.Name">Customer Name</lable>
-        <input type="text" asp-for="@Model.Name" />
-        <span class="text-danger" asp-validation-for="@Model.Name"></span>
+            <form action="" method="post">
+                <div class="form-group">
+                    <lable class="form-control" asp-for="@Model.Name">Customer Name</lable>
+                    <input class="form-control" type="text" asp-for="@Model.Name" />
+                    <span class="text-danger form-check" asp-validation-for="@Model.Name"></span>
+                </div>
+
+                <div class="form-group">
+                    <input class="btn btn-primary" type="submit" />
+                </div>
+            </form>
+        </div>
     </div>
-    
-    <div class="form-control">
-        <input class="btn btn-primary" type="submit" />
-    </div>
-</form>
