--- a/Shopping/Views/Cart/AddProduct.cshtml
+++ b/Shopping/Views/Cart/AddProduct.cshtml
@@ -3,27 +3,31 @@
     ViewData["Title"] = "AddProduct";
 }
 
-<h1>AddProduct</h1>
+<div class="row">
+    <div class="col-5 offset-3">
+        <a asp-action="ViewProducts">Back to Products</a>
+        <h1>Add Product</h1>
 
-<a asp-action="ViewProducts">Back to Products</a>
 
-<form class="form-group" action="" method="post">
-    <div class="form-control">
-        <lable asp-for="@Model.ProductName">Product Name</lable>
-        <input type="text" asp-for="@Model.ProductName" />
-        <span class="text-danger" asp-validation-for="@Model.ProductName"></span>
+        <form action="" method="post">
+            <div class="form-group">
+                <lable class="form-control" asp-for="@Model.ProductName">Product Name</lable>
+                <input class="form-control" type="text" asp-for="@Model.ProductName" />
+                <span class="text-danger" asp-validation-for="@Model.ProductName"></span>
+            </div>
+            <div class="form-group">
+                <lable class="form-control" asp-for="@Model.UnitPrice">Unit Price</lable>
+                <input class="form-control" type="text" asp-for="@Model.UnitPrice" />
+                <span class="text-danger" asp-validation-for="@Model.UnitPrice"></span>
+            </div>
+            <div class="form-group">
+                <lable class="form-control" asp-for="@Model.QuantityAtHand">Quantity at Hand</lable>
+                <input class="form-control" type="text" asp-for="@Model.QuantityAtHand" />
+                <span class="text-danger" asp-validation-for="@Model.QuantityAtHand"></span>
+            </div>
+            <div class="row">
+                <input class="col-2 offset-5 align-self-center btn btn-primary" type="submit" />
+            </div>
+        </form>
     </div>
-    <div class="form-control">
-        <lable asp-for="@Model.UnitPrice">Unit Price</lable>
-        <input type="text" asp-for="@Model.UnitPrice" />
-        <span class="text-danger" asp-validation-for="@Model.UnitPrice"></span>
-    </div>
-    <div class="form-control">
-        <lable asp-for="@Model.QuantityAtHand">Quantity at Hand</lable>
-        <input type="text" asp-for="@Model.QuantityAtHand" />
-        <span class="text-danger" asp-validation-for="@Model.QuantityAtHand"></span>
-     </div>
-    <div class="form-control">
-        <input class="btn btn-primary" type="submit" />
-    </div>
-</form>
+</div>
