--- a/Shopping/Views/Cart/ViewProduct.cshtml
+++ b/Shopping/Views/Cart/ViewProduct.cshtml
@@ -13,7 +13,10 @@
 
 <form action="" method="post">
     <label>Update Quantity</label>
-    <input type="number" name="productId" hidden value="@Model.Id" />
-    <input type="number" name="newQuantity" placeholder="@Model.QuantityAtHand" />
+    <input type="number" asp-for="@Model.Id" hidden value="@Model.Id" />
+    <input type="number" asp-for="@Model.UnitPrice" hidden value="@Model.UnitPrice" />
+    <input asp-for="@Model.ProductName" hidden value="@Model.ProductName" />
+
+    <input type="number" asp-for="@Model.QuantityAtHand" value="@Model.QuantityAtHand" />
     <input class="btn btn-dark" type="submit" value="Update" />
 </form>
