--- a/Shopping/Views/Cart/Index.cshtml
+++ b/Shopping/Views/Cart/Index.cshtml
@@ -61,21 +61,21 @@
                 }
             }
             @*<tr>
-                    <td><input type="hidden" value="2" name="[0].product.id" /> Carrots</td>
-                    <td><input type="hidden" value="12" name="[0].quantity" />12</td>
-                    <td><input type="hidden" value="120" name="[0].total" />120</td>
-                    <td><button>Remove</button></td>
-                </tr>
-                <tr>
-                    <td><input type="hidden" value="1" name="[1].product.id" /> Maggots</td>
-                    <td><input type="hidden" value="12" name="[1].quantity" />2</td>
-                    <td><input type="hidden" value="120" name="[1].total" />240</td>
-                    <td><button>Remove</button></td>
-                </tr>*@
+                <td><input type="hidden" value="2" name="[0].product.id" /> Carrots</td>
+                <td><input type="hidden" value="12" name="[0].quantity" />12</td>
+                <td><input type="hidden" value="120" name="[0].total" />120</td>
+                <td><button>Remove</button></td>
+            </tr>
+            <tr>
+                <td><input type="hidden" value="1" name="[1].product.id" /> Maggots</td>
+                <td><input type="hidden" value="12" name="[1].quantity" />2</td>
+                <td><input type="hidden" value="120" name="[1].total" />240</td>
+                <td><button>Remove</button></td>
+            </tr>*@
         </tbody>
         <tr>
             <td>
-                <div class="autocomplete" >
+                <div class="autocomplete">
                     <select hidden class="dropdown" id="product-picker" name="productId">
                         @foreach (var product in Model.Products)
                         {
@@ -95,9 +95,16 @@
             <td><h4 id="quantity-output"></h4></td>
             <td><button id="add-line-item" class="btn btn-dark">Add</button></td>
         </tr>
+        <tr>
+            <td>
+                <h2 class="text-center">Grand Total </h2>
+            </td>
+            <td></td>
+            <td><h2> $<span id="total-output">0</span></h2></td>
+            <td></td>
+        </tr>
     </table>
 
-    <h2 class="text-right">Grand Total  $<span id="total-output">0</span></h2>
 
     <div class="row">
         <div class="col-4 offset-5">
