Changed Project Layout. Segregated classes. Added mapping. Improved update ui

--- a/Shopping/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/Shopping/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using Shopping.Areas.Identity
-@using Microsoft.AspNetCore.Identity
+@using Shopping.Data
 @namespace Shopping.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
