--- a/Shopping/Views/Shared/_Layout.cshtml
+++ b/Shopping/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Cart" asp-action="Index">Store</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Order" asp-action="Index">Store</a>
                         </li>
                         <partial name="_LoginPartial" />
                     </ul>
