--- a/Shopping/Views/Customers/AddCustomer.cshtml
+++ b/Shopping/Views/Customers/AddCustomer.cshtml
@@ -5,7 +5,7 @@
 
     <div class="row">
         <div class="col-5 offset-3">
-            <a asp-action="Index">Back</a>
+            <a asp-controller="Order" asp-action="Index">Back</a>
 
             <h1>Add Customer</h1>
 
