Improved services. Fixed quantity bugs. Improved UX. Updated Project Structure

--- a/Shopping/Views/Order/Index.cshtml
+++ b/Shopping/Views/Order/Index.cshtml
@@ -16,7 +16,7 @@
 <h1>Add Order</h1>
 
 
-<form  action="" method="post" autocomplete="off">
+<form  asp-action="AddOrder" method="post" autocomplete="off">
     <div class="row">
         <div class="form-group col-md-6">
             <label class="form-control" asp-for="@Model.AssociatedCustomer">Customer</label>
