--- a/Shopping/Views/Customers/AddCustomer.cshtml
+++ b/Shopping/Views/Customers/AddCustomer.cshtml
@@ -9,7 +9,7 @@
 
             <h1>Add Customer</h1>
 
-            <form action="" method="post">
+            <form asp-controller="Customer" asp-action="AddCustomer" method="post">
                 <div class="form-group">
                     <lable class="form-control" asp-for="@Model.Name">Customer Name</lable>
                     <input class="form-control" type="text" asp-for="@Model.Name" />
