--- a/Shopping/Views/Products/ViewProduct.cshtml
+++ b/Shopping/Views/Products/ViewProduct.cshtml
@@ -11,7 +11,7 @@
 
 <h3>@Model.QuantityAtHand Available</h3>
 
-<form action="" method="post">
+<form asp-action="UpdateProduct" method="post">
     <label>Update Quantity</label>
     <input type="number" asp-for="@Model.Id" hidden value="@Model.Id" />
     <input type="number" asp-for="@Model.UnitPrice" hidden value="@Model.UnitPrice" />
